# portfolio

./: .gitignore  20200573 엄태준.docx  README.md  pyproject.toml
01_university_assignments/과제/: 20200573 엄태준 국제무역론 과제2.docx  20200573_엄태준_다국적기업과제4.docx  과제 3 다국적 기업과 경제분석.docx  부록_instruction_20200573_엄태준.docx  부록_실험경제학.docx  산업경제학 과제4.docx  스포츠 대본.docx  실험연구계획서25최종.docx  요약 개요.docx
02_data_analysis/excel/: 2012-2024.xlsx  2024semi.xlsx  MLB-Free Agency 2012-2024.xlsx  SSS.xlsx  affordable_gas_stations.xlsx  filgas_station_data.xlsx  gas_stations_detail.xlsx  grdp_population_analysis.csv  gu_data.xlsx  last_data.xlsx  pop_2013.xlsx  pop_2013의 복사본.csv  real_2012-2024.csv  rgdp_2013.xlsx  rgdp_2013의 복사본.csv  s2012-2024.xlsx  sigungu_with_gas_stations.csv  sigungu_with_gas_stations.xlsx  www.xlsx  www2.xlsx  알뜰주유소_위치정보.xlsx  한국석유공사_알뜰주유소 현황_20231231.xlsx.csv
02_data_analysis/nonmoon/: 문서 - 바로 가기.lnk  프로젝트_요약.txt
02_data_analysis/working/: analysis.py  cme_analysis.py  data_prep.py  deep_learning_analysis.py  explanation.txt  merge_interpolated.py  prepared_data.csv  process_ois.py  target2_analysis.py  tree.dot
02_data_analysis/컴투스/: BG.xlsx  final_grdp_with_population.xlsx  rp.xlsx  sigungu_with_gas_stations.csv  불펜 회귀식.docx  재분배.py  파정선.py
03_ai_ml_projects/ai, 빅데이터 과정/: AI 기반 Scale 불량 최적화 전략 보고서.docx  from google.docx  top_p9.ipynb  빅데이터 과정.docx
04_python_scripts/파이선/: 0729.py  1001.py  2024.py  2024719.py  2024semi.py  719.py  930.py  931.py  PRICE.py  excel data.py  fasfasf.py  fillter.py  final.py  image.py  kakaoapi.py  (+8 more)
configs/: default.yaml
src/: main.py
(+193 files in other folders)
